Fixed layout bug on MS Edge & commented out javascript code to fix bug

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -124,8 +124,13 @@ ul.footer-links {
     display: none;
     list-style-type: none;
     text-align: center;
-    padding-inline-start: 0%;
+    padding: 0;
     font-size: 1.5rem;
+}
+
+.social-heading {
+    font-size: 23px;
+    margin: auto;
 }
 
 .my-social {
